# much

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  argmax.c  crossentropy.c  crossentropy.h  layer.c  layer.h  main.c  mnist.c  mnist.h  mse.c  mse.h  optimizer.c  optimizer.h  run_mnist.sh  sequence.c  sequence.h  tensor.c  tensor.h  util.c
impl/: argmax.c  crossentropy.c  layer.c  mnist.c  mse.c  optimizer.c  sequence.c  tensor.c  util.c
include/much/: argmax.h  crossentropy.h  layer.h  mnist.h  mse.h  optimizer.h  sequence.h  tensor.h  util.h
src/: main.c
